name: network-msg
version: 0.1
category: Network
build-type: Simple 
cabal-version: >= 1.6

library
  exposed-modules:
    Network.Socket.Msg
  other-modules:
    Network.Socket.Msg.Internal
    Network.Socket.Msg.CMsg
    Network.Socket.Msg.IOVec
    Network.Socket.Msg.MsgHdr

  c-sources: cbits/cmsg.c

  build-depends:
    base,
    bytestring,
    network,
    unix

  extensions: CPP, ForeignFunctionInterface
  ghc-options: -Wall -fwarn-tabs
